# chessQ

./: .Cargo.toml.swo  .github_ready.txt  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRICING_MODAL_FIXED.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  TODO.md  package.json
beanches/: move_gen_beanch.rs
docs/: APP_DOCUMENTATION.md  APP_GUIDE.md  DOCUMENTATION.md
src/: lib.rs  main.rs  server.rs
src/ai/: evaluation.rs  search.rs
src/engine/: bitboard.rs  magic.rs  move_gen.rs  transposition.rs  zobrist.rs
src/integrations/: lichess.rs
src/state/: game_state.rs
src/ui/: renderer.rs
tests/: e2e_tests.rs  engine_tests.rs  integration_tests.rs
web/: admin.html  app.js  index.html  landing-pro.css  landing-pro.html  landing-pro.js  landing.css  learn.js  locales.js  play.css  play.html  play.js  robots.txt  sitemap.xml  styles.css
